--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,17 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos</title>
-</head>
-<body>
-    <h1>Productos</h1>
-    <a href="{{ url_for('add_producto') }}">Agregar Producto</a>
-    <ul>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1 class="text-center">Lista de Productos</h1>
+    <ul class="list-group">
         {% for producto in productos %}
-            <li>
-                <a href="{{ url_for('show_producto', id=producto.id) }}">{{ producto.nombre }}</a>
-                <a href="{{ url_for('edit_producto', id=producto.id) }}">Editar</a>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <a href="{{ url_for('show_producto', id=producto.id) }}" class="btn btn-link">{{ producto.nombre }}</a>
+                <a href="{{ url_for('edit_producto', id=producto.id) }}" class="btn btn-warning btn-sm">Editar</a>
                 <form action="{{ url_for('delete_producto', id=producto.id) }}" method="POST" style="display:inline;">
-                    <button type="submit">Eliminar</button>
+                    <button type="submit" class="btn btn-danger btn-sm">Eliminar</button>
                 </form>
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
+
